--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
   <link rel="stylesheet" type="text/css" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
   <!-- <script src="init.js"></script> -->
   <script type="text/javascript" src="init.js"></script>
 <head>
